# CS538

pa1/: package-lock.json  package.json  testing.js
pa1/pa1/: README.md  extra.js  package.json  quick.js
pa2/pa2/: README.md  package-lock.json  package.json
pa2/pa2/module/: builtins.js  helpers.js  require-json.js
pa3/pa3/: README.md  lazy.js
pa4/pa4/: README.md  warmup.cabal
pa4/pa4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pa4/pa4/lib/: Warmup.hs
pa4/pa4/test/: Test.hs
pa5/pa5/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pa5/pa5/lib/: TypeClasses.hs
pa6/pa6/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  (+3 more)
pa6/pa6/lib/: Calculator.hs
pa7/pa7/: README.md  bench.js  test.js
pa7/pa7/step-1/: README.md  interp.js
pa7/pa7/step-2/: README.md  interp.js
pa7/pa7/step-3/: README.md  interp.js
pa7/pa7/step-4/: interp.js
pa7/pa7/step-5/: README.md  interp.js
pa7/pa7/step-6/: interp.js
pa7/pa7/step-7/: README.md  interp.js
pa8/pa8/: README.md  package-lock.json  package.json
pa8/pa8/sym_ex/: main.js
pa8/pa8/unit_test/: pa1_test.js  pa2_test.js  pa3_test.js
pa9/: .history  README.md  poly.cabal
pa9/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pa9/src/: Eval.hs  Infer.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
pa9/test/: MainTest.hs
test/: test.hs
(+6 files in other folders)
